GNOME Bugzilla – Bug 696426
GParamSpecTypeInfo do not need to be static
Last modified: 2015-09-13 06:22:47 UTC
While initializing the built-in GParamSpecs in _g_param_spec_types_init(), all the temporary GParamSpecTypeInfo structs are defined as static, hence kept around for no reasons.
Created attachment 239592 [details] [review] Drop "static" from GParamSpecTypeInfo